Change Boolean constructor usage flagged by Findbugs
git-svn-id: http://argouml.tigris.org/svn/argouml/trunk/src_new@10436 a161b567-7d1e-0410-9ef9-912c70fedb3f