@@ -43,7 +43,7 @@ class ActionAutoCritique extends UMLAction {
     public ActionAutoCritique() {
 	super("action.toggle-auto-critique", NO_ICON);
 	putValue("SELECTED",
-                new Boolean(Designer.theDesigner().getAutoCritique()));
+                Boolean.valueOf(Designer.theDesigner().getAutoCritique()));
     }
 
     /**
