@@ -28,13 +28,18 @@ import org.argouml.model.Model;
 
 class ActionModifierActive extends AbstractActionCheckBoxMenuItem {
     /**
+     * Serial version generated for rev. 1.5
+     */
+    private static final long serialVersionUID = -4458846555966612262L;
+
+    /**
      * The constructor.
      *
      * @param o the target
      */
     public ActionModifierActive(Object o) {
         super("checkbox.active-uc", NO_ICON);
-        putValue("SELECTED", new Boolean(valueOfTarget(o)));
+        putValue("SELECTED", Boolean.valueOf(valueOfTarget(o)));
     }
 
     /**
