@@ -28,13 +28,18 @@ import org.argouml.model.Model;
 
 class ActionModifierLeaf extends AbstractActionCheckBoxMenuItem {
     /**
+     * Serial version generated for rev. 1.5
+     */
+    private static final long serialVersionUID = 1087245945242698348L;
+
+    /**
      * The constructor.
      *
      * @param o the target
      */
     public ActionModifierLeaf(Object o) {
         super("checkbox.final-uc", NO_ICON);
-        putValue("SELECTED", new Boolean(valueOfTarget(o)));
+        putValue("SELECTED", Boolean.valueOf(valueOfTarget(o)));
     }
 
     /**
